feat(api): implemented shared structure to enable sharing of endpoints between server definitions
